--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,58 +12,92 @@
       margin: 0;
       font-family: Arial, sans-serif;
     }
+
     #contacts {
       width: 25%;
       border-right: 1px solid #ddd;
       overflow-y: auto;
     }
+
     #chat {
       flex: 1;
       display: flex;
       flex-direction: column;
     }
+
     #messages {
       flex: 1;
       padding: 10px;
       overflow-y: auto;
       background: #f5f5f5;
     }
+
     #input-area {
       display: flex;
       padding: 10px;
       border-top: 1px solid #ddd;
     }
+
     #input-message {
       flex: 1;
       padding: 8px;
       font-size: 16px;
     }
+
     #send-btn {
       padding: 8px 16px;
       font-size: 16px;
       margin-left: 10px;
       cursor: pointer;
     }
+
     .contact {
       padding: 10px;
       border-bottom: 1px solid #eee;
       cursor: pointer;
     }
+
     .contact:hover {
       background: #ddd;
     }
+
     .message {
       margin-bottom: 10px;
     }
+
     .sender {
       font-weight: bold;
     }
+
     .timestamp {
       font-size: 0.8em;
       color: #666;
+
+      .no-contacts,
+      .error {
+        padding: 20px;
+        text-align: center;
+        color: #666;
+      }
+
+      .error {
+        color: #d32f2f;
+      }
+
+      /* Garante que os contatos ocupem toda a altura */
+      #contacts {
+        display: flex;
+        flex-direction: column;
+      }
+
+      /* Estilo para contato selecionado */
+      .contact.selected {
+        background-color: #e0e0e0;
+      }
     }
   </style>
 </head>
+
 <body>
   <div id="contacts"></div>
   <div id="chat">
@@ -75,4 +110,5 @@
 
   <script src="app.js"></script>
 </body>
+
 </html>
