--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,26 +72,26 @@
     .timestamp {
       font-size: 0.8em;
       color: #666;
+    }
 
-      .no-contacts,
-      .error {
-        padding: 20px;
-        text-align: center;
-        color: #666;
-      }
+    .no-contacts,
+    .error {
+      padding: 20px;
+      text-align: center;
+      color: #666;
+    }
 
-      .error {
-        color: #d32f2f;
-      }
+    .error {
+      color: #d32f2f;
+    }
 
-      #contacts {
-        display: flex;
-        flex-direction: column;
-      }
+    #contacts {
+      display: flex;
+      flex-direction: column;
+    }
 
-      .contact.selected {
-        background-color: #e0e0e0;
-      }
+    .contact.selected {
+      background-color: #e0e0e0;
     }
   </style>
 </head>
@@ -106,7 +106,7 @@
     </div>
   </div>
 
-  <script src="app.js"></script>
+  <script src="./app.js"></script>
 </body>
 
 </html>
