--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,72 +6,116 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>WhatsApp Bot - Interface</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
+      margin: 0;
+      font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       display: flex;
       height: 100vh;
-      margin: 0;
-      font-family: Arial, sans-serif;
+      background-color: #e5ddd5;
     }
 
     #contacts {
-      width: 25%;
+      width: 30%;
+      max-width: 320px;
+      background-color: #f0f0f0;
       border-right: 1px solid #ddd;
+      display: flex;
+      flex-direction: column;
       overflow-y: auto;
+    }
+
+    .contact {
+      padding: 15px 20px;
+      border-bottom: 1px solid #e0e0e0;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      transition: background 0.2s;
+    }
+
+    .contact:hover,
+    .contact.selected {
+      background-color: #e6e6e6;
     }
 
     #chat {
       flex: 1;
       display: flex;
       flex-direction: column;
+      background-color: #e5ddd5;
     }
 
     #messages {
       flex: 1;
-      padding: 10px;
+      padding: 20px;
       overflow-y: auto;
-      background: #f5f5f5;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .message {
+      max-width: 60%;
+      padding: 10px 15px;
+      margin: 5px 0;
+      border-radius: 7.5px;
+      position: relative;
+      font-size: 14px;
+      line-height: 1.4;
+      word-wrap: break-word;
+    }
+
+    .message.sent {
+      align-self: flex-end;
+      background-color: #dcf8c6;
+    }
+
+    .message.received {
+      align-self: flex-start;
+      background-color: #fff;
+    }
+
+    .timestamp {
+      display: block;
+      font-size: 11px;
+      color: #888;
+      margin-top: 4px;
+      text-align: right;
     }
 
     #input-area {
       display: flex;
       padding: 10px;
-      border-top: 1px solid #ddd;
+      background-color: #f0f0f0;
+      border-top: 1px solid #ccc;
     }
 
     #input-message {
       flex: 1;
-      padding: 8px;
-      font-size: 16px;
+      padding: 10px;
+      border: none;
+      border-radius: 20px;
+      font-size: 15px;
+      outline: none;
     }
 
     #send-btn {
-      padding: 8px 16px;
-      font-size: 16px;
+      background-color: #008069;
+      color: white;
+      border: none;
+      border-radius: 20px;
+      padding: 10px 20px;
       margin-left: 10px;
       cursor: pointer;
+      font-size: 15px;
+      transition: background 0.2s;
     }
 
-    .contact {
-      padding: 10px;
-      border-bottom: 1px solid #eee;
-      cursor: pointer;
-    }
-
-    .contact:hover {
-      background: #ddd;
-    }
-
-    .message {
-      margin-bottom: 10px;
-    }
-
-    .sender {
-      font-weight: bold;
-    }
-
-    .timestamp {
-      font-size: 0.8em;
-      color: #666;
+    #send-btn:hover {
+      background-color: #075e54;
     }
 
     .no-contacts,
@@ -85,13 +129,10 @@
       color: #d32f2f;
     }
 
-    #contacts {
-      display: flex;
-      flex-direction: column;
-    }
-
-    .contact.selected {
-      background-color: #e0e0e0;
+    @media (max-width: 768px) {
+      #contacts {
+        display: none;
+      }
     }
   </style>
 </head>
